--- a/scss/_gnb.scss
+++ b/scss/_gnb.scss
@@ -1,66 +1,100 @@
 header{
-    height: 45px;
     width: 100%;
-    background-color: #d6211e;
-    color: #Ffff;
-    @include flex-center;
+    background-color: #Fff;
+    position: fixed;
+    top: -60px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 15px 10px;
+    z-index: 50;
+    @include transition(.3s);
     .header-wrap{
         width: 100%;
-        padding: 0px 20px;
-        @include flex-space-center;
-        .logo{
-            font-weight: bold;
-            font-size: 18px;
+        overflow-x: auto;
+        &::-webkit-scrollbar {
+            width: 0;
+            height: 0
         }
-        .toggle{
-            width: 115px;
-            height: 25px;
-            @include flex-center;
-            background-color: #e48887;
-            border-radius: 12.5px;
-            position: relative;
-            a{
-                display: inline-block;
+        ul{
+            width: 100%;
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            gap: 5px;
+            li{
+                border-radius: 15px;
+                background-color: #fff;
+                border: 1px solid #d9d9d9;
+                padding: 8px 15px;
+                color: #8c8c8c;
                 font-size: 12px;
+                font-weight: normal;
                 line-height: 1;
-                color: #fff;
-                font-weight: 500;
-                position: absolute;
-                z-index: 5;
-                top: 50%;
-                transform: translateY(-50%);
-                @include transition(.5s);
-                &:nth-of-type(1){
-                    left: 20px;
-                }
-                &:nth-of-type(2){
-                    right: 15px;
+                @include transition(.3s);
+                white-space: nowrap;
+                a{
+                    @include flex-center;
+                    @include fullsize;
+                    @include transition(.3s);
                 }
                 &.active{
-                    color: #d6211e;
+                    background-color: #000;
+                    border-color: #000;
+                    color: #fff;
                 }
             }
-            .toggle_bg{
-                width: 65px;
-                height: 100%;
-                background-color: #Fff;
-                border-radius: 12.5px;
-                position: absolute;
-                top: 50%;
-                transform: translateY(-50%);
-                z-index: 1;
-                @include transition(.5s);
-                &.left{
-                    left: 0%;
-                }
-                &.right{
-                    left: 50px;
+        }
+    }
+    &.active{
+        top: 0;
+    }
+}
+footer{
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 50;
+    .footer-wrap{
+        width: 100%;
+        background-color: #fff;
+        padding: 15px 0;
+        ul{
+            @include fullsize;
+            @include flex-center;
+            gap: 10px;
+            li{
+                @include fullsize;
+                a{
+                    @include fullsize;
+                    display: flex;
+                    justify-content: flex-end;
+                    align-items: center;
+                    flex-direction: column;
+                    gap: 10px;
+                    font-size: 12px;
+                    font-weight: normal;
+                    color: #909090;
+                    &.order{
+                        padding-top: 30px;
+                        position: relative;
+                        .icon-wrap{
+                            width: 60px;
+                            height: 60px;
+                            background-color: #d6211e;
+                            @include flex-center;
+                            position: absolute;
+                            border-radius: 50%;
+                            top: -45px;
+                        }
+                    }
                 }
             }
         }
     }
 }
 
-footer{
-    
+header,footer{
+    max-width: 400px;
 }
